manifests/network-policies/cluster-wide/allow-pod-identity-egress.yaml
apiVersion: networking.k8s.aws/v1alpha1
kind: ClusterNetworkPolicy
metadata:
  name: admin-allow-pod-identity-egress
spec:
  tier: Admin
  priority: 11
  subject:
    namespaces: {}
  egress:
    - action: Accept
      name: allow-pod-identity-agent-egress
      to:
        - networks:
            - 169.254.170.23/32
      ports:
        - portNumber:
            protocol: TCP
            port: 80
