manifests/network-policies/cluster-wide/default-deny.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: default-deny
spec:
  endpointSelector:
    matchExpressions:
      - key: io.kubernetes.pod.namespace
        operator: In
        # add a namespace name here to opt it in
        values:
          - kube-public
          - kube-node-lease
          - podinfo
          - vpa
          - goldilocks
          - cilium-secrets
          - external-secrets
          - default
          - gateway
          - external-dns
  enableDefaultDeny:
    ingress: true
    egress: true
  ingress:
    - {}
  egress:
    - {}
