manifests/network-policies/cluster-wide/deny-imds-egress.yaml
apiVersion: networking.k8s.aws/v1alpha1
kind: ClusterNetworkPolicy
metadata:
  name: admin-deny-imds-egress
spec:
  tier: Admin
  priority: 1
  subject:
    namespaces: {}
  egress:
    - action: Deny
      name: deny-imds-egress
      to:
        - networks:
            - 169.254.169.254/32
