manifests/network-policies/cluster-wide/kube-apiserver-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: kube-apiserver-egress
spec:
  endpointSelector:
    matchExpressions:
      - key: io.kubernetes.pod.namespace
        operator: In
        # add a namespace name here to opt it in
        values:
          - vpa
          - goldilocks
          - external-secrets
          - external-dns
          - tailscale
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
